04/08/14
-restored/improved loggers
-fixed closing errors

23/07/14
-added support for 96bit RGB images

11/07/14
-added the possibility to copy/cut/paste formatted (and colored) text
-minor layout changes/fixes

03/07/14
-Ctrl + S should now be Apple/Command + S on mac OS X (not tested yet)
-fixed minor memory leaks when software is closing

20/06/14
-fixed bugs and serialization errors associated to these external letters.

17/06/14
-added support for letters outside the rows (first try), since many users seem to like to do figures that way

16/05/14
-fixed a bug when trying to edit an existing journal style (casting error for DPI)
-added a rule to bracket unique letters when a text contains only one letter

20/03/14
-fixed a big bug affecting 8 bit images (that made them appear black)
-fixed a big bug prevented removal of images produced upon a color blind split
-changed version number to 2.7

22/09/13
-insets can now be directly extracted from rectangular ROIs

18/07/13
-renamed a few text files (including journal styles and themes) to prevent ImageJ proper from trying to load them (FIJI was not making this mistake)
-I have started to improve the integration with ImageJ

10/07/13
-fixed a minor bug reported by a user that prevented images from being exported when no journal style was selected
-allowed the "edit image" window to be resized

30/06/13-4/07/13
-allowed images to be selected in rows using only the mouse (first click on a row selects the row, second click selects a column/panel and third click selects an image) (see http://youtu.be/2f4d5YHBXNA)
-added shortcuts. Click on Help/Licenses/Citations>shortcuts for a complete list of shortcuts.
-fixed several typos and text capitalization inconsistencies
-renamed "block" to "panel"
-added support for resolution in journal styles
-added a warning when the user tries to use a resolution lower than that recommended by the journal (see http://youtu.be/3ul6nhqJMxk)