@@ -1,9 +1,11 @@
 /dist/
+SF_web_videos.txt
 simple_test_sample_FiguR.xlsx
 test_sample_FiguR.xlsx
 obfuscation_parameters_best.txt
 obfuscation_parameters_best_One_JAR.pro
 obfuscation_parameters_best_One_JAR.txt
 obfuscation_parameters_best_windows.pro
-
+TA_mapping.map
+applet.policy
 /build/
