@@ -1,28 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
-<properties>
-<comment>last update Mon Apr 22 13:23:00 CEST 2013</comment>
-<entry key="Y Axis Title Color">#006699</entry>
-<entry key="Axis Ticks Color">#ccffcc</entry>
-<entry key="X Axis Text Color">#6666ff</entry>
-<entry key="Facet Text Color">#0000ff</entry>
-<entry key="Plot Area Frame Color">#660066</entry>
-<entry key="Theme name">Test All Entries (Fake 2 qsdqsdqsdsqd)</entry>
-<entry key="Plot Area Minor Grid Color">#006633</entry>
-<entry key="Plot Area Major Grid Color">#666600</entry>
-<entry key="Facet Background Color">#ffff00</entry>
-<entry key="Main Plot Title Color">#cc3300</entry>
-<entry key="Plot Area Major Grid Stroke Width">3.0</entry>
-<entry key="Background Color">#ccccff</entry>
-<entry key="X Axis Title Color">#66ff66</entry>
-<entry key="Legend Text Color">#66cc00</entry>
-<entry key="Axis Ticks Stroke Width">0.7</entry>
-<entry key="Facet Stroke Width">5.0</entry>
-<entry key="Plot Area Background Color">#ffcccc</entry>
-<entry key="Y Axis Text Color">#ff3333</entry>
-<entry key="Plot Area Minor Grid Stroke Width">4.0</entry>
-<entry key="Plot Area Frame Stroke Width">2.0</entry>
-<entry key="Facet Frame Color">#ff9900</entry>
-<entry key="Legend Title Color">#006666</entry>
-<entry key="Legend Background Color">#00cccc</entry>
-</properties>
